# diskstress

./: AUTHORS  Makefile.am  README.md  bootstrap.sh  configure.ac
debian/: control
doc/: diskstress.8
packaging/: debmake_params  diskstress.spec  git-to-changelog  mkdeb.sh  mkrpm.sh
src/: diskstress.cc
